@@ -276,7 +276,7 @@
        </widget>
       </item>
       <item row="5" column="3">
-       <widget class="QComboBox" name="horizontalAlignement">
+       <widget class="QComboBox" name="horizontalAlignment">
         <item>
          <property name="text">
           <string>Left</string>
@@ -312,7 +312,7 @@
        </widget>
       </item>
       <item row="6" column="3">
-       <widget class="QComboBox" name="verticalAlignement">
+       <widget class="QComboBox" name="verticalAlignment">
         <item>
          <property name="text">
           <string>Top</string>
@@ -757,7 +757,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>horizontalAlignement</sender>
+   <sender>horizontalAlignment</sender>
    <signal>currentIndexChanged(int)</signal>
    <receiver>ScalingWidget</receiver>
    <slot>slotPropertyChanged()</slot>
@@ -773,7 +773,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>verticalAlignement</sender>
+   <sender>verticalAlignment</sender>
    <signal>currentIndexChanged(int)</signal>
    <receiver>ScalingWidget</receiver>
    <slot>slotPropertyChanged()</slot>
